--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
